# e2sar-utils

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_INSTRUCTIONS.md  Dockerfile.cli  HOWTO.md  README.md  VERSION.txt  entrypoint.sh  env.sh  meson.build  meson.build.old  meson.options  meson_options.abs  meson_options.txt
.claude/skills/haidis-launch/: SKILL.md
.claude/skills/haidis-launch/scripts/: fetch_known_issues.sh  fetch_perlmutter_timeline.sh
ersap/: .ersap_history
ersap-data/: haidis.ersap
ersap-data/config/: services.yaml
ersap/lib/: libCodaTimeFrameBinaryDataType.so.1  libCodaTimeFrameBinaryDataType.so.1.0.0  libCodaTimeFrameBinaryPrinterActor.so.1  libCodaTimeFrameBinaryPrinterActor.so.1.0.0  libCodaTimeFrameDataType.so.1  libCodaTimeFrameDataType.so.1.0.0  libCodaTimeFramePrinterActor.so.1  libCodaTimeFramePrinterActor.so.1.0.0  libHaidisActor.so.1  libHaidisActor.so.1.0.0  libHaidisLinkActor.so.1  libHaidisLinkActor.so.1.0.0
ersap/lib/cmake/ersap/: ersap-targets.cmake
ersap/lib/cmake/xmsg/: xmsg-targets.cmake
ersap/lib/ersap/: c_dpe
ersap/lib/haidis_connectors/include/: shmem_writer.hpp
ersap/lib/haidis_connectors/lib/cmake/shmem_writer/: shmem_writer-config-release.cmake  shmem_writer-config.cmake
ersap/lib/pkgconfig/: ersap.pc  xmsg.pc
include/: event_data.hpp  file_processor.hpp  meson.build
sbatch/: README.md  haidis_slurm.sh
src/: e2sar_root.cpp  ersap_et_receiver.cpp  ersap_processor_actor.cpp  event_data.cpp  file_processor.cpp  meson.build  root_reader.cpp
tests/: README.md  compare_histos.C  factored_gluex_analysis.C  gluex_event_selection.C  meson.build  read_dalitz_root.py  test_e2sar.cpp  test_loopback.sh
