# Tests
if get_option('enable_tests')
  # Add test framework dependency (e.g., Google Test, Catch2, etc.)
  # test_dep = dependency('gtest', main : true, required : false)

  # Test sources
  test_sources = files(
    # Add your test files here
    # 'test_main.cpp',
  )

  # Build and register tests
  # if test_dep.found() and test_sources.length() > 0
  #   test_exe = executable('e2sar_utils_tests',
  #     test_sources,
  #     include_directories : inc_dir,
  #     dependencies : [project_deps, test_dep, e2sar_utils_dep],
  #   )
  #
  #   test('unit_tests', test_exe)
  # endif
endif
